# base_image

./: !.nu  ,.nu  README.md  __.nu  __.yaml  x.nu  x.yaml
.github/workflows/: archgw.yaml  asw-admin.yaml  axum.yaml  build.yaml  check-image-compliance.yaml  dioxus.yaml  dotnet.yaml  frontend.yaml  graphRAG.yaml  industrial-brain.yaml  jdgenie.yaml  knowledge-base.yaml  llama_index.yaml  netcore.yaml  netcore2.2.yaml  oa-web-admin.yaml  ollama.yaml  pg_duckdb.yaml  php-yii.yaml  php.yaml  py-baidu.yaml  py-entrance-guard.yaml  pydantic-ai.yaml  redis.yaml  risingwave.yaml  saas-shop.yaml  web-admin.yaml
archgw/: Dockerfile  requirements.txt
asw-admin/: package.json
axum/: Cargo.toml  Dockerfile
check-image-compliance/: Cargo.toml  Dockerfile
dify/: Dockerfile
dioxus/: Cargo.toml
dotnet/: ,.nu  Dockerfile.tmpl  README.md  builder-2.2.Dockerfile
dotnet/csproj/FMS_API_Core.EntityFrameworkCore/: FMS_API_Core.EntityFrameworkCore.csproj
dotnet/csproj/FMS_API_Core.Web/: FMS_API_Core.Web.csproj
graphRAG/: Dockerfile
industrial-brain/: Dockerfile  package.json
jdgenie/: Dockerfile
knowledge-base/: Dockerfile  requirements.txt
llama_index/: requirements.txt
netcore/: 2.2.csproj  Dockerfile  Dockerfile.tmpl  README.md  builder-2.2.Dockerfile  requirements.txt  runtime-2.2.Dockerfile  start.sh
netcore/csproj/FMS_API_Core.Application/: FMS_API_Core.Application.csproj
netcore/csproj/FMS_API_Core.Core/: FMS_API_Core.Core.csproj
oa-web-admin/: Dockerfile  package.json
ollama/: Dockerfile
pg_duckdb/: Dockerfile
php/: 7.Dockerfile  8.Dockerfile  ferron.kdl  v7.Dockerfile  v7.Dockerfile.bak  v8.Dockerfile
php-yii/: Dockerfile  composer.json
py-baidu/: requirements.txt
py-entrance-guard/: requirements.txt
pydantic-ai/: Dockerfile  requirements.txt
redis/: Dockerfile
risingwave/: py.Dockerfile
saas-shop/: Dockerfile  package.json
web-admin/: package.json
