[package]
name = "check-image-compliance"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
anyhow = "1.0.100"
figment = { version = "0.10.19", features = ["toml", "env"] }
tracing-serde = "0.2.0"
minijinja = { version = "2.12.0", features = ["loader"] }

[[bin]]
name = "main"
path = "src/main.rs"
