[package]
name = "faucet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
gloo-net = "0.6.0"
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sycamore = { version = "0.9.1"  }
sycamore-futures = "0.9.1"
trunk = "0.21.13"
